[gd_scene load_steps=36 format=3 uid="uid://d2xtvgd1tw1q7"]

[ext_resource type="Script" path="res://lib/main_menu/title_card/title_card.gd" id="1_syrn8"]
[ext_resource type="Shader" path="res://lib/main_menu/title_card/shaders/shader_logo.gdshader" id="2_41jbb"]
[ext_resource type="Texture2D" uid="uid://n0dr8y0nclty" path="res://lib/dragger/materials/textures/paint_mask.png" id="3_ha0jo"]
[ext_resource type="Texture2D" uid="uid://cg2gi43kvjm2t" path="res://lib/main_menu/title_card/textures/words_b_1.png" id="4_0n7jl"]
[ext_resource type="Texture2D" uid="uid://b8cdl6c84bmik" path="res://lib/main_menu/title_card/textures/words_b_2.png" id="5_6mvx8"]
[ext_resource type="Texture2D" uid="uid://bppqnvia18t4x" path="res://lib/main_menu/title_card/textures/jade_1.png" id="6_hgbpr"]
[ext_resource type="Texture2D" uid="uid://bmmeod7qm0tym" path="res://lib/main_menu/title_card/textures/jade_2.png" id="7_n8y6u"]
[ext_resource type="Texture2D" uid="uid://d2dqd7dkg5uu3" path="res://lib/main_menu/title_card/textures/jade_3.png" id="8_nhqii"]
[ext_resource type="Texture2D" uid="uid://70cjpay7fib4" path="res://lib/main_menu/title_card/textures/jade_4.png" id="9_cpqck"]
[ext_resource type="Texture2D" uid="uid://dagbhjhvtaxvn" path="res://generic/textures/mote.png" id="11_jbnao"]
[ext_resource type="Texture2D" uid="uid://dar3m8o4bfln6" path="res://lib/main_menu/title_card/textures/base_b.png" id="11_xo7qj"]

[sub_resource type="Gradient" id="Gradient_5ksc3"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v2cij"]
gradient = SubResource("Gradient_5ksc3")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r0jlg"]
shader = ExtResource("2_41jbb")
shader_parameter/paint_mask_exponent = 1.0
shader_parameter/value = 0.0
shader_parameter/paint_mask_texture = ExtResource("3_ha0jo")
shader_parameter/paint_mask_gradient = SubResource("GradientTexture2D_v2cij")

[sub_resource type="Gradient" id="Gradient_h6n1f"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ajm1b"]
gradient = SubResource("Gradient_h6n1f")
fill_from = Vector2(1, 0)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hm66m"]
shader = ExtResource("2_41jbb")
shader_parameter/paint_mask_exponent = 1.0
shader_parameter/value = 0.0
shader_parameter/paint_mask_texture = ExtResource("3_ha0jo")
shader_parameter/paint_mask_gradient = SubResource("GradientTexture2D_ajm1b")

[sub_resource type="Animation" id="Animation_op7tt"]
resource_name = "Float"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jade1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Vector2(-10, 40), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Jade1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Jade2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Vector2(-10, 40), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Jade2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Jade3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Vector2(-10, 40), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Jade3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Jade4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 1.1),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Vector2(-10, 40), Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Jade4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3, 1.1),
"transitions": PackedFloat32Array(-3, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_il5cn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jade1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Jade1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Jade2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 40)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Jade2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Jade3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 40)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Jade3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Jade4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 40)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Jade4:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_es33u"]
_data = {
"Float": SubResource("Animation_op7tt"),
"RESET": SubResource("Animation_il5cn")
}

[sub_resource type="Animation" id="Animation_b1qnh"]
resource_name = "float"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-491, -84), Vector2(-491, -95), Vector2(-491, -84)]
}

[sub_resource type="Animation" id="Animation_3fwjh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-491, -84)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gq085"]
_data = {
"RESET": SubResource("Animation_3fwjh"),
"float": SubResource("Animation_b1qnh")
}

[sub_resource type="Curve" id="Curve_5f0s8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.203488, 1), 0.0, 0.0, 0, 0, Vector2(0.581395, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_6gxpn"]
curve = SubResource("Curve_5f0s8")

[sub_resource type="Gradient" id="Gradient_rhp3j"]
colors = PackedColorArray(0, 0.443137, 0.14902, 0.756863, 0.501961, 0.807843, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0h82f"]
gradient = SubResource("Gradient_rhp3j")

[sub_resource type="Curve" id="Curve_8nbjw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1rid4"]
curve = SubResource("Curve_8nbjw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_52ck6"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 0.6, 1)
emission_shape = 2
emission_sphere_radius = 170.0
spread = 20.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, -20, 0)
scale_min = 0.25
scale_max = 0.4
color_ramp = SubResource("GradientTexture1D_0h82f")
alpha_curve = SubResource("CurveTexture_6gxpn")
turbulence_noise_strength = 0.1
turbulence_influence_over_life = SubResource("CurveTexture_1rid4")

[sub_resource type="Curve" id="Curve_7mnpy"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.203488, 1), 0.0, 0.0, 0, 0, Vector2(0.581395, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_gx7py"]
curve = SubResource("Curve_7mnpy")

[sub_resource type="Curve" id="Curve_11n4b"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dhml8"]
curve = SubResource("Curve_11n4b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5jvoq"]
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 200.0
spread = 20.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, -20, 0)
scale_min = 0.25
scale_max = 0.5
alpha_curve = SubResource("CurveTexture_gx7py")
turbulence_enabled = true
turbulence_noise_strength = 0.1
turbulence_influence_over_life = SubResource("CurveTexture_dhml8")

[node name="TitleCard" type="Node2D"]
script = ExtResource("1_syrn8")

[node name="Words1" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_r0jlg")
texture = ExtResource("4_0n7jl")

[node name="Words2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hm66m")
position = Vector2(67, -80)
texture = ExtResource("5_6mvx8")

[node name="JadeBotRoot" type="Node2D" parent="."]
position = Vector2(-491, -84)
scale = Vector2(0.785, 0.785)

[node name="Jade1" type="Sprite2D" parent="JadeBotRoot"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("6_hgbpr")

[node name="Jade2" type="Sprite2D" parent="JadeBotRoot"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-10, 40)
texture = ExtResource("7_n8y6u")

[node name="Jade3" type="Sprite2D" parent="JadeBotRoot"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-10, 40)
texture = ExtResource("8_nhqii")

[node name="Jade4" type="Sprite2D" parent="JadeBotRoot"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-10, 40)
texture = ExtResource("9_cpqck")

[node name="Anim" type="AnimationPlayer" parent="JadeBotRoot"]
libraries = {
"": SubResource("AnimationLibrary_es33u")
}

[node name="FloatPlayer" type="AnimationPlayer" parent="JadeBotRoot"]
libraries = {
"": SubResource("AnimationLibrary_gq085")
}
autoplay = "float"

[node name="StartDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Dust" type="GPUParticles2D" parent="."]
position = Vector2(-250, 0)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_52ck6")
texture = ExtResource("11_jbnao")
one_shot = true
speed_scale = 0.75
explosiveness = 0.25
fixed_fps = 60

[node name="ClipBase" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(-1, 1)
texture = ExtResource("11_xo7qj")

[node name="ClipMotes" type="GPUParticles2D" parent="ClipBase"]
position = Vector2(12, 17)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_5jvoq")
texture = ExtResource("11_jbnao")
lifetime = 2.0
one_shot = true
speed_scale = 0.75
explosiveness = 0.25
fixed_fps = 60
